# VisualSFMToTheiaConverter

./: CMakeLists.txt  LICENSE  convert_vsfm_to_theia_reconstruction.cc  export_vsfm_matches.cc
cmake/: OptimizeCompilerFlags.cmake
